--- a/oh-package.json5
+++ b/oh-package.json5
@@ -2,9 +2,13 @@
   "modelVersion": "5.0.0",
   "description": "Please describe the basic information.",
   "dependencies": {
+    "@ohos/axios": "^2.2.0",
+    "@abner/log": "^1.0.3",
+    "dayjs": "^1.11.7"
   },
   "devDependencies": {
     "@ohos/hypium": "1.0.18",
     "@ohos/hamock": "1.0.0"
-  }
+  },
+  "dynamicDependencies": {}
 }
