--- a/product/phone/src/main/module.json5
+++ b/product/phone/src/main/module.json5
@@ -52,6 +52,12 @@
           }
         ]
       }
+    ],
+    "metadata": [
+      {
+        "name": "client_id",
+        "value": '111293791'
+      }
     ]
   }
 }
