--- a/product/phone/src/main/module.json5
+++ b/product/phone/src/main/module.json5
@@ -14,7 +14,21 @@
     "pages": "$profile:main_pages",
     "requestPermissions": [
       {
-        "name": "ohos.permission.INTERNET",
+        "name": "ohos.permission.INTERNET"
+      },
+      {
+        "name": "ohos.permission.ACCESS_BLUETOOTH",
+        "reason": "$string:app_name",
+        "usedScene": {
+          "abilities": [ "EntryAbility"],
+          "when":"inuse"
+        }
+      },
+      {
+        "name": "ohos.permission.GET_WIFI_INFO"
+      },
+      {
+        "name": "ohos.permission.ACCELEROMETER"
       }
     ],
     "abilities": [
